--- a/default.hbs
+++ b/default.hbs
@@ -13,7 +13,6 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-LRlmVvLKVApDVGuspQFnRQJjkv0P7/YFrw84YYQtmYG4nK8c+M+NlmYDCv0rKWpG" crossorigin="anonymous">
 	{{! Scripts }}
 	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script src="{{asset "/js/includes/retina.min.js"}}"></script>
 	<script src="{{asset "dist/global.js"}}"></script>
 
 	{{#is "post"}}
@@ -28,7 +27,7 @@
 	{{> analytics}}
 	{{! Ghost outputs important style and meta data with this tag }}
   {{ghost_head}}
-	{{> mixpanel}}
+	{{!--{{> mixpanel}}--}}
 </head>
 <body class="{{body_class}}">
 	<!-- Google Tag Manager (noscript) -->
