--- a/src/less/pages/apply.less
+++ b/src/less/pages/apply.less
@@ -19,7 +19,8 @@
       text-align: left;
       font-size: 1.5em;
       border-bottom: 1px solid #d5dae6;
-      padding-bottom: 10px;
+      padding-bottom: 7px;
+      font-weight: 100 !important;
     }
 
     fieldset {
@@ -27,6 +28,12 @@
       display: block;
       background: white;
       margin-bottom: 50px;
+      padding-left: 0;
+      padding-right: 0;
+
+      &:last-of-type {
+        margin-bottom: 0;
+      }
     }
 
     .active {
