colors and stuff idk nobody reads this anywya i hate my life

--- a/src/less/global/footer.less
+++ b/src/less/global/footer.less
@@ -288,15 +288,15 @@
 		padding: 13px 20px;
 		border: 0;
 		outline: 0;
-		background: #29314b;
-		box-shadow: 2px 2px 0 #020303;
+		background: #33587d !important;
+		box-shadow: 2px 2px 0 #111213;
 		color: #fff;
 		font-size: 16px;
 		text-transform: Uppercase;
 		transition: all 0.3s ease-out;
 
 		&:hover {
-			background: @hover-color;
+			background: @hover-color !important;
 			box-shadow: 2px 2px 3px 0 #239084;
 		}
 
