--- a/src/less/posts/serieswidget.less
+++ b/src/less/posts/serieswidget.less
@@ -36,6 +36,7 @@
       counter-increment: step-counter -1;
       color: #518899;
       font-family: 'TTNorms-Regular';
+      margin-left: 0;
       @media(max-width: 600px) {
         font-size: 0.9em;
         line-height: 1.3;
@@ -71,7 +72,7 @@
 
     &::before {
       margin-left: 0;
-      font-family: 'TTNorms-Medium';
+      font-family: 'TTNorms-Bold';
     }
   }
 }
