added main js to global entrypoint

--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -11,5 +11,5 @@
   <script src="{{asset "/js/includes/ghost-search.min.js"}}"></script>
   <script src="{{asset "/js/search.min.js"}}"></script>
 {{/is}}
-<!--<script src="{{asset "/js/main.min.js"}}"></script>-->
+<script src="{{asset "/js/main.min.js"}}"></script>
 <!-- End Scripts -->
