--- a/partials/about-author.hbs
+++ b/partials/about-author.hbs
@@ -1,4 +1,4 @@
-<!-- start about the author -->
+<!-- start about-the-author -->
 {{#foreach authors include="count.posts"}}
 	<div class="about-author author-card-large clearfix">
 		{{#if profile_image}}
@@ -32,4 +32,4 @@
 
 	</div>
 {{/foreach}}
-<!-- end about the author -->
+<!-- end about-the-author -->
