--- a/partials/article-preview.hbs
+++ b/partials/article-preview.hbs
@@ -1,4 +1,4 @@
-
+<!-- start article preview -->
 <div class="article-preview">
   <a href="{{url}}">
     <div class="img-wrapper " style="background-image: url({{img_url feature_image}});"></div>
@@ -12,3 +12,4 @@
     </div>
     </a>
 </div>
+<!-- end article preview -->
