--- a/partials/widget-author.hbs
+++ b/partials/widget-author.hbs
@@ -1,4 +1,4 @@
-<!-- Start 'about the author' -->
+<!-- start author widget -->
 {{#foreach authors}}
   <div class="about-author clearfix widget">
     <h4 class="title">Author</h4>
@@ -34,4 +34,4 @@
     {{/if}}
   </div>
 {{/foreach}}
-<!-- end about the author -->
+<!-- end author widget -->
