--- a/partials/widget-authors.hbs
+++ b/partials/widget-authors.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start authors widget -->
 <div class="widget contributors">
 	<h3 class="footer-title">Contributors</h3>
 	<div class="contributor-container">
@@ -20,4 +20,4 @@
 			{{/get}}
 			</div>
 </div>
-<!-- end widget -->
+<!-- end authors widget -->
