--- a/partials/widget-authortwitter.hbs
+++ b/partials/widget-authortwitter.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start twitter widget -->
 <!--<div class="widget twitter">
 	<div class="twitter">
 		<h3 class="title">Twitter</h3>
@@ -9,4 +9,4 @@
   <h3 class="title">Twitter</h3>
   <iframe src="https://feed.mikle.com/widget/v2/78832/" width="100%" class="fw-iframe" scrolling="no" frameborder="0"></iframe>
 </div>
-<!-- end widget -->
+<!-- end twitter widget -->
