--- a/partials/widget-authorwebsite.hbs
+++ b/partials/widget-authorwebsite.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start website widget -->
 
 <a href="{{website}}">
   <div class="widget author-website" style="0">
@@ -9,9 +9,8 @@
 <script>
   $(document).ready(function() {
     function websiteCard(website) {
-
     }
     websiteCard('{{website}}');
   })
 </script>
-<!-- end widget -->
+<!-- end website widget -->
