--- a/partials/widget-footernewsletter.hbs
+++ b/partials/widget-footernewsletter.hbs
@@ -1,3 +1,4 @@
+<!-- start subscribe widget -->
 <div id="newsletter-footer" class="widget newsletter">
     <h3 class="footer-title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
@@ -17,3 +18,4 @@
     {{/if}}
   </div>
 </div>
+<!-- end subscribe widget -->
