--- a/partials/widget-github.hbs
+++ b/partials/widget-github.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start github widget -->
 <div class="widget github" style="display:none;">
   <h3 class="title">Github</h3>
   <div class="widget-body">
@@ -22,4 +22,4 @@
   }
 
 </script>
-<!-- end widget -->
+<!-- end github widget -->
