--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start recent widget -->
 {{#get "posts" limit="4" filter="tags:-[hash-hidden,Roundup,roundup]"}}
 <div class="widget recent">
 	<h4 class="title">Recent</h4>
@@ -11,4 +11,4 @@
 	</div>
 </div>
 {{/get}}
-<!-- end widget -->
+<!-- end recent widget -->
