--- a/partials/widget-relatedpost.hbs
+++ b/partials/widget-relatedpost.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start related widget -->
 <div class="widget related">
 	<h4 class="title">Related</h4>
 	<div class="recent-post">
@@ -11,4 +11,4 @@
 			{{/get}}
 			</div>
 </div>
-<!-- end widget -->
+<!-- end related widget -->
