--- a/partials/widget-sidebarnewsletter.hbs
+++ b/partials/widget-sidebarnewsletter.hbs
@@ -1,4 +1,4 @@
-<!-- start widget -->
+<!-- start subscribe widget -->
 <div id="newsletter-sidebar" class="widget newsletter">
     <h3 class="sidebar-title">{{t "Newsletter"}}</h3>
 	 <div class="newsletter input-group">
@@ -18,4 +18,4 @@
     {{/if}}
   </div>
 </div>
-<!-- end tag cloud widget -->
+<!-- end subscribe widget -->
