--- a/src/less/pages.less
+++ b/src/less/pages.less
@@ -9,9 +9,10 @@
 @import 'pages/about-page.less';
 @import 'pages/tag-page.less';
 @import 'pages/projects-page.less';
-@import 'pages/python-page.less';
+@import 'pages/resources.less';
 @import 'pages/customtemplates.less';
 @import 'pages/series.less';
 @import 'pages/githubcard.less';
 @import 'pages/cover.less';
 @import 'pages/apply.less';
+@import 'pages/kanban.less';
