--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,13 +1,16 @@
-<!-- start header -->
-<nav class="main-navigation">
-		{{navigation}}
-</nav>
-<header class="main-header videoHeader">
-		<!-- start logo -->
-	{{#if @blog.logo}}
-		<a class="branding" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3"></a>
-	{{else}}
-		<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
-	{{/if}}
-	<!-- start navigation -->
+<header>
+  <div class="banner">
+    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3"></a>
+    {{#if @blog.logo}}
+  		<a class="branding" href="{{@blog.url}}">
+        <img src="{{@blog.logo}}" alt="{{@blog.title}}" data-rjs="3">
+        <!--<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3">-->
+      </a>
+  	{{else}}
+  		<a class="branding" href="{{@blog.url}}">{{@blog.title}}</a>
+  	{{/if}}
+  </div>
+  <nav class="navigation">
+  		{{navigation}}
+  </nav>
 </header>
