--- a/partials/kanban.hbs
+++ b/partials/kanban.hbs
@@ -1,48 +1,43 @@
+<!-- start kanban widget -->
 <div class="kanbancontainer swiper-container">
-<div class="kanban swiper-wrapper">
-
-  <div class="column swiper-slide b">
-  <div id="backlog">
-    <div class="column-head">
-      <h2>Backlog</h2>
-      <span class="count"></span>
+  <div class="kanban swiper-wrapper">
+    <div class="column swiper-slide b">
+      <div id="backlog">
+        <div class="column-head">
+          <h2>Backlog</h2>
+          <span class="count"></span>
+        </div>
+        <div class="cards"></div>
+      </div>
     </div>
-    <div class="cards"></div>
-  </div>
-</div>
-
-<div class="column swiper-slide t">
-  <div id="todo">
-    <div class="column-head">
-      <h2>To Do</h2>
-      <span class="count"></span>
+    <div class="column swiper-slide t">
+      <div id="todo">
+        <div class="column-head">
+          <h2>To Do</h2>
+          <span class="count"></span>
+        </div>
+        <div class="cards"></div>
+      </div>
     </div>
-    <div class="cards"></div>
-  </div>
-  </div>
-
-  <div class="column swiper-slide p">
-  <div id="progress">
-    <div class="column-head">
-      <h2>In Progress</h2>
-      <span class="count"></span>
+    <div class="column swiper-slide p">
+      <div id="progress">
+        <div class="column-head">
+          <h2>In Progress</h2>
+          <span class="count"></span>
+        </div>
+        <div class="cards"></div>
+      </div>
     </div>
-    <div class="cards"></div>
-  </div>
-</div>
-
-  <div class="column swiper-slide d">
-  <div id="done">
-    <div class="column-head">
-      <h2>Done</h2>
-      <span class="count"></span>
+    <div class="column swiper-slide d">
+      <div id="done">
+        <div class="column-head">
+          <h2>Done</h2>
+          <span class="count"></span>
+        </div>
+        <div class="cards"></div>
+      </div>
     </div>
-    <div class="cards"></div>
   </div>
-</div>
-
-</div>
   <div class="swiper-pagination"></div>
 </div>
-
-<!-- If we need pagination -->
+<!-- end kanban pagination -->
