--- a/partials/widget-search.hbs
+++ b/partials/widget-search.hbs
@@ -1,9 +1,8 @@
-<!-- start widget -->
+<!-- start search widget -->
 <div class="widget search">
-	<!--<h4 class="title">Search</h4>-->
 		<div class="form-group">
     	<input id="my-custom-input" placeholder="Search all posts">
 		</div>
     <div id="my-custom-results"></div>
 </div>
-<!-- end widget -->
+<!-- end search widget -->
