ignoring all the pressing issues in my life by coding

--- a/partials/header.hbs
+++ b/partials/header.hbs
@@ -1,9 +1,9 @@
 <header>
   <div class="banner">
-    <a class="logo" href="{{@blog.url}}"><img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3"></a>
     {{#if @blog.logo}}
-  		<a class="branding" href="{{@blog.url}}">
+  		<a class="logo" href="{{@blog.url}}">
         <img src="{{@blog.logo}}" alt="{{@blog.title}}" data-rjs="3">
+        <!-- <img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3"> -->
         <!--<img src="https://res.cloudinary.com/hackers-and-slackers/image/upload/v1544107494/images/logowhite_long.png" alt="{{@blog.title}}" data-rjs="3">-->
       </a>
   	{{else}}
