im retiring from writing commit messages

--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -216,7 +216,7 @@
       h2 {
         margin-top: 0 !important;
         font-size: 1.38em;
-        margin: 0 auto 20px;
+        margin: 0 auto 20px !important;
         /*border-bottom: 1px solid fade(@theme-color, 40%);*/
         padding-bottom: 0;
         position: relative;
