--- a/src/less/posts/code.less
+++ b/src/less/posts/code.less
@@ -123,7 +123,7 @@ blockquote pre {
         width: -moz-webkit-fill-available;
         padding: 8px 0;
         font-size: 1.4em;
-        margin-bottom: 0;
+        margin: 0 auto;
       }
     }
 
