--- a/src/less/posts/languages/shell.less
+++ b/src/less/posts/languages/shell.less
@@ -133,8 +133,7 @@
       width: -moz-webkit-fill-available;
       padding: 8px 0;
       font-size: 1.4em;
-      margin-bottom: 0;
-      margin-left: 0;
+      margin: 0 auto;
     }
   }
 }
