--- a/src/less/posts/postfooter.less
+++ b/src/less/posts/postfooter.less
@@ -96,8 +96,9 @@
 				a {
 					text-align: center;
 					display: block;
-					padding: 6px 10px 5px 7px !important;
+					padding: 6px 0 5px 0 !important;
 					width: -webkit-fill-available;
+					width: -moz-fill-available;
 				}
 
 				&.facebook {
@@ -160,10 +161,11 @@
 				}
 
 				i {
-					margin: auto 0;
-					color: #c3c5cb;
-					font-size: 20px;
+					margin: auto;
+					color: #a3a7b2;
+					font-size: 23px;
 					display: block;
+					width: fit-content;
 				}
 				@media(max-width: 800px) {
 					width: 100%;
