added links widget

--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -1,7 +1,7 @@
 <!-- start main-footer -->
 <footer class="main-footer">
 	<div class="footer-container">
-		{{> widget-footernewsletter}}
+		{{> widget-links}}
 		{{> widget-authors}}
 		{{> widget-tagcloud}}
 	</div>
@@ -9,5 +9,4 @@
 <!-- end main-footer -->
 
 {{> scripts}}
-
 {{ghost_foot}}
