--- a/src/less/pages/kanban.less
+++ b/src/less/pages/kanban.less
@@ -261,10 +261,10 @@
           }
 
           h5 {
-            font-size: .93em;
-            line-height: 1.3;
+            font-size: .9em;
+            line-height: 1.2;
             text-transform: capitalize;
-            font-family: 'TTNorms-Medium';
+            font-family: 'TTNorms-Regular';
             color: #3c3d46;
             margin: 2px 0 20px;
             width: 99%;
