adding resources page

--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -1,7 +1,7 @@
 {{!< default}}
 {{! The tag above means - insert everything in this file into the {body} of the default.hbs template }}
 <!-- start site's main content area -->
-<section class="content-wrap archive page-python-packages">
+<section class="content-wrap archive page-resources">
   {{> postheader}}
   <div class="container">
     <!-- start post -->
