make resources page work

--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -7,7 +7,8 @@
   section {
         width: -webkit-fill-available;
   }
-  table {
+  
+  #table {
     td {
       white-space: nowrap;
       max-width: 200px;
