--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -15,7 +15,7 @@
         {{/if}}
         <h1>{{{title}}}</h1>
         <p>{{content}}</p>
-        <table id="python-table">
+        <table id="resources-table">
           <thead>
 
           </thead>
@@ -33,10 +33,10 @@
 <script>
   $(document).ready(function() {
     function populatePython(pythons, status) {
-      $('#python-table thead').append('<tr><th></th><th>summary</th><th>description</th><th>issuetype</th></tr>');
+      $('#resources-table thead').append('<tr><th></th><th>summary</th><th>description</th><th>issuetype</th></tr>');
       for (var i = 0; i < pythons.length; i++) {
-        $('#python-table tbody').append('<tr class="' + pythons[i].issuetype + '"> \n ' +
-          '<td><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
+        $('#resources-table tbody').append('<tr class="' + pythons[i].issuetype + '"> \n ' +
+          '<td class="icon"><img src="' + pythons[i].issuetype_icon + '"></td> \n' +
           '<td class="summary">' + pythons[i].summary + '</td> \n' +
           '<td><a href="' + pythons[i].description + '">' + pythons[i].description + '</a></td> \n' +
           '<td class="issuetype-name">' + pythons[i].issuetype + '</td> \n' +
@@ -55,7 +55,7 @@
         },
         contentType: 'application/json'
       }).done(function(results) {
-        populatePython(results, 'python-table');
+        populatePython(results, 'resources-table');
       });
     }
 
