make resources page work

--- a/custom-resources.hbs
+++ b/custom-resources.hbs
@@ -15,6 +15,7 @@
         {{/if}}
         <h1>{{{title}}}</h1>
         <p>{{content}}</p>
+        <div id="tablewrapper">
         <table id="resources-table">
           <thead>
 
@@ -22,6 +23,7 @@
           <tbody>
           </tbody>
         </table>
+      </div>
       </div>
   </div>
   {{/post}}
