--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -8,9 +8,13 @@
         width: -webkit-fill-available;
   }
 
-  #resources-table {
+  #tablewrapper{
     margin: auto 40px 40px;
     width: -webkit-fill-available;
+  }
+
+  #resources-table {
+    width:100%;
     td {
       white-space: nowrap;
       text-overflow: ellipsis;
@@ -25,7 +29,7 @@
         }
 
         .icon {
-          text-align: center;
+          text-align: center !important;
         }
 
         .summmary {
