make resources page work

--- a/src/less/pages/resources.less
+++ b/src/less/pages/resources.less
@@ -8,6 +8,10 @@
         width: -webkit-fill-available;
   }
 
+  p {
+    margin: auto 40px;
+  }
+
   #tablewrapper{
     margin: auto 40px 40px;
     width: -webkit-fill-available;
@@ -42,7 +46,7 @@
         }
 
         .issuetype-name {
-          font-size: .7em !important;
+          font-size: .8em !important;
           min-width: 100px;
         }
 
